--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Students</h1>
     <ul>
-      <% students.forEach(todo => { %>
+      <% students.forEach(student => { %>
         <li>
                   <%= students.text %> 
                   - 
