--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Express App</title>
+    <title>Intro Express Labs</title>
 </head>
 <body>
     <h1>Home Page (from template!)</h1>
